--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,3 +40,26 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+# Catppuccin Mocha theme
+set -g status-style "bg=#1e1e2e fg=#cdd6f4"  # base background and text
+set -g pane-border-style "fg=#45475a"        # surface1
+set -g pane-active-border-style "fg=#89b4fa" # blue
+set -g message-style "bg=#313244 fg=#f9e2af" # surface2 and yellow
+set -g mode-style "bg=#45475a fg=#cdd6f4"   # surface1 and text
+
+# Status bar customization
+set -g status-left "#[bg=#89b4fa,fg=#1e1e2e,bold] #S #[bg=#1e1e2e] "
+set -g status-right "#[bg=#1e1e2e,fg=#cba6f7] %H:%M #[bg=#cba6f7,fg=#1e1e2e,bold] #h "
+set -g window-status-format "#[bg=#1e1e2e,fg=#9399b2] #I: #W "
+set -g window-status-current-format "#[bg=#89b4fa,fg=#1e1e2e,bold] #I: #W "
+
+# Key colors from Catppuccin Mocha:
+# base:    #1e1e2e
+# text:    #cdd6f4
+# surface1: #45475a
+# surface2: #313244
+# blue:    #89b4fa
+# yellow:  #f9e2af
+# mauve:   #cba6f7
+# mantle:  #181825
